Dynamic mixin FLOAT value tested