@@ -4,6 +4,8 @@ import java.io.File;
 import java.io.IOException;
 import java.util.UUID;
 
+import javax.xml.bind.DatatypeConverter;
+
 import org.apache.commons.io.FileUtils;
 import org.w3c.dom.DOMException;
 import org.w3c.dom.NamedNodeMap;
@@ -11,8 +13,6 @@ import org.w3c.dom.Node;
 
 import com.me3tweaks.modmanager.ModManager;
 import com.me3tweaks.modmanager.objects.Patch;
-import com.sun.org.apache.xml.internal.security.exceptions.Base64DecodingException;
-import com.sun.org.apache.xml.internal.security.utils.Base64;
 
 /**
  * Patch that can be compiled and applied on the fly
@@ -22,6 +22,7 @@ import com.sun.org.apache.xml.internal.security.utils.Base64;
  */
 public class DynamicPatch {
 	Patch finalPatch;
+	private File outputfile;
 
 	/**
 	 * Creates a dynamic mixin object from a node in modmaker xml
@@ -32,15 +33,17 @@ public class DynamicPatch {
 	 * @throws Base64DecodingException 
 	 * @throws IOException 
 	 */
-	public DynamicPatch(Node dynamicmixinNode) throws Base64DecodingException, DOMException, IOException {
+	public DynamicPatch(Node dynamicmixinNode) throws DOMException, IOException {
 		NamedNodeMap map = dynamicmixinNode.getAttributes();
-		byte[] datatowrite = Base64.decode(dynamicmixinNode.getTextContent());
-		File outputfile = new File(ModManager.getTempDir()+"dynamicpatch-"+UUID.randomUUID().toString()+".jsf");
+		String hexdata = dynamicmixinNode.getTextContent();
+		byte[] datatowrite = DatatypeConverter.parseHexBinary(hexdata);
+		outputfile = new File(ModManager.getTempDir()+"dynamicpatch-"+UUID.randomUUID().toString()+".jsf");
 		FileUtils.writeByteArrayToFile(outputfile, datatowrite);
+		ModManager.debugLogger.writeMessage("Wrote temporary mixin patch: "+outputfile);
 		finalPatch = new Patch();
-		finalPatch.setTargetPath(map.getNamedItem("targetpath").getTextContent());
-		finalPatch.setTargetModule(map.getNamedItem("targetpath").getTextContent());
-		finalPatch.setPatchPath("");
+		finalPatch.setTargetPath(map.getNamedItem("targetfile").getTextContent());
+		finalPatch.setTargetModule(map.getNamedItem("targetmodule").getTextContent());
+		finalPatch.setPatchPath(outputfile.getAbsolutePath());
 		finalPatch.setValid(true);
 		finalPatch.setFinalizer(false);
 		finalPatch.setPatchName(map.getNamedItem("name").getTextContent());
@@ -51,6 +54,10 @@ public class DynamicPatch {
 		finalPatch.setPatchCMMVer(ModManager.MODDESC_VERSION_SUPPORT);
 		finalPatch.setPatchAuthor("ME3Tweaks ModMaker Dynamic MixIn");
 		finalPatch.setMe3tweaksid(0);
+	}
+
+	public File getOutputfile() {
+		return outputfile;
 	}
 
 	public Patch getFinalPatch() {
